src/main/org/jamocha/parser/sl_old/SLParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. SLParser.java */
package org.jamocha.parser.sl_old;

public class SLParser/*@bgen(jjtree)*/implements SLParserTreeConstants, SLParserConstants {/*@bgen(jjtree)*/
  protected JJTSLParserState jjtree = new JJTSLParserState();public static void main(String args[]){
        try{
                System.out.println("Reading from standard input...");
                SLParser parser = new SLParser(System.in);
                SimpleNode content = parser.Content();
            content.dump("");
            System.out.println("Thank you.");
        }
        catch(ParseException e){
            System.out.println("parse(): an invalid expression!");
            System.out.println(e.getMessage());
            e.printStackTrace();
        }
        catch (TokenMgrError e){
            System.out.println("a Token Manager error!");
            System.out.println(e.getMessage());
            e.printStackTrace();
        }
    }

/* Content syntax follows */
  final public SimpleNode Content() throws ParseException {
 /*@bgen(jjtree) Content */
  SLContent jjtn000 = new SLContent(this, JJTCONTENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(6);
      label_1:
      while (true) {
        ContentExpression();
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
      }
      jj_consume_token(7);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void ContentExpression() throws ParseException {
 /*@bgen(jjtree) ContentExpression */
  SLContentExpression jjtn000 = new SLContentExpression(this, JJTCONTENTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_2(3)) {
        IdentifyingExpression();
      } else if (jj_2_3(3)) {
        ActionExpression();
      } else if (jj_2_4(3)) {
        Wff();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Wff() throws ParseException {
 /*@bgen(jjtree) Wff */
  SLWff jjtn000 = new SLWff(this, JJTWFF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_5(3)) {
        AtomicFormula();
      } else if (jj_2_6(3)) {
        jj_consume_token(6);
        jj_consume_token(8);
                    SLNot jjtn001 = new SLNot(this, JJTNOT);
                    boolean jjtc001 = true;
                    jjtree.openNodeScope(jjtn001);
        try {
          Wff();
        } catch (Throwable jjte001) {
                    if (jjtc001) {
                      jjtree.clearNodeScope(jjtn001);
                      jjtc001 = false;
                    } else {
                      jjtree.popNode();
                    }
                    if (jjte001 instanceof RuntimeException) {
                      {if (true) throw (RuntimeException)jjte001;}
                    }
                    if (jjte001 instanceof ParseException) {
                      {if (true) throw (ParseException)jjte001;}
                    }
                    {if (true) throw (Error)jjte001;}
        } finally {
                    if (jjtc001) {
                      jjtree.closeNodeScope(jjtn001,  1);
                    }
        }
        jj_consume_token(7);
      } else if (jj_2_7(3)) {
        jj_consume_token(6);
        jj_consume_token(9);
        Wff();
                          SLAnd jjtn002 = new SLAnd(this, JJTAND);
                          boolean jjtc002 = true;
                          jjtree.openNodeScope(jjtn002);
        try {
          Wff();
        } catch (Throwable jjte002) {
                          if (jjtc002) {
                            jjtree.clearNodeScope(jjtn002);
                            jjtc002 = false;
                          } else {
                            jjtree.popNode();
                          }
                          if (jjte002 instanceof RuntimeException) {
                            {if (true) throw (RuntimeException)jjte002;}
                          }
                          if (jjte002 instanceof ParseException) {
                            {if (true) throw (ParseException)jjte002;}
                          }
                          {if (true) throw (Error)jjte002;}
        } finally {
                          if (jjtc002) {
                            jjtree.closeNodeScope(jjtn002,  2);
                          }
        }
        jj_consume_token(7);
      } else if (jj_2_8(3)) {
        jj_consume_token(6);
        jj_consume_token(10);
        Wff();
                         SLOr jjtn003 = new SLOr(this, JJTOR);
                         boolean jjtc003 = true;
                         jjtree.openNodeScope(jjtn003);
        try {
          Wff();
        } catch (Throwable jjte003) {
                         if (jjtc003) {
                           jjtree.clearNodeScope(jjtn003);
                           jjtc003 = false;
                         } else {
                           jjtree.popNode();
                         }
                         if (jjte003 instanceof RuntimeException) {
                           {if (true) throw (RuntimeException)jjte003;}
                         }
                         if (jjte003 instanceof ParseException) {
                           {if (true) throw (ParseException)jjte003;}
                         }
                         {if (true) throw (Error)jjte003;}
        } finally {
                         if (jjtc003) {
                           jjtree.closeNodeScope(jjtn003,  2);
                         }
        }
        jj_consume_token(7);
      } else if (jj_2_9(3)) {
        jj_consume_token(6);
        jj_consume_token(11);
        Wff();
                              SLImplies jjtn004 = new SLImplies(this, JJTIMPLIES);
                              boolean jjtc004 = true;
                              jjtree.openNodeScope(jjtn004);
        try {
          Wff();
        } catch (Throwable jjte004) {
                              if (jjtc004) {
                                jjtree.clearNodeScope(jjtn004);
                                jjtc004 = false;
                              } else {
                                jjtree.popNode();
                              }
                              if (jjte004 instanceof RuntimeException) {
                                {if (true) throw (RuntimeException)jjte004;}
                              }
                              if (jjte004 instanceof ParseException) {
                                {if (true) throw (ParseException)jjte004;}
                              }
                              {if (true) throw (Error)jjte004;}
        } finally {
                              if (jjtc004) {
                                jjtree.closeNodeScope(jjtn004,  2);
                              }
        }
        jj_consume_token(7);
      } else if (jj_2_10(3)) {
        jj_consume_token(6);
        jj_consume_token(12);
        Wff();
                            SLEquiv jjtn005 = new SLEquiv(this, JJTEQUIV);
                            boolean jjtc005 = true;
                            jjtree.openNodeScope(jjtn005);
        try {
          Wff();
        } catch (Throwable jjte005) {
                            if (jjtc005) {
                              jjtree.clearNodeScope(jjtn005);
                              jjtc005 = false;
                            } else {
                              jjtree.popNode();
                            }
                            if (jjte005 instanceof RuntimeException) {
                              {if (true) throw (RuntimeException)jjte005;}
                            }
                            if (jjte005 instanceof ParseException) {
                              {if (true) throw (ParseException)jjte005;}
                            }
                            {if (true) throw (Error)jjte005;}
        } finally {
                            if (jjtc005) {
                              jjtree.closeNodeScope(jjtn005,  2);
                            }
        }
        jj_consume_token(7);
      } else if (jj_2_11(3)) {
        jj_consume_token(6);
        jj_consume_token(13);
        Variable();
                                  SLForAll jjtn006 = new SLForAll(this, JJTFORALL);
                                  boolean jjtc006 = true;
                                  jjtree.openNodeScope(jjtn006);
        try {
          Wff();
        } catch (Throwable jjte006) {
                                  if (jjtc006) {
                                    jjtree.clearNodeScope(jjtn006);
                                    jjtc006 = false;
                                  } else {
                                    jjtree.popNode();
                                  }
                                  if (jjte006 instanceof RuntimeException) {
                                    {if (true) throw (RuntimeException)jjte006;}
                                  }
                                  if (jjte006 instanceof ParseException) {
                                    {if (true) throw (ParseException)jjte006;}
                                  }
                                  {if (true) throw (Error)jjte006;}
        } finally {
                                  if (jjtc006) {
                                    jjtree.closeNodeScope(jjtn006,  2);
                                  }
        }
        jj_consume_token(7);
      } else if (jj_2_12(3)) {
        jj_consume_token(6);
        jj_consume_token(14);
        Variable();
                                  SLExists jjtn007 = new SLExists(this, JJTEXISTS);
                                  boolean jjtc007 = true;
                                  jjtree.openNodeScope(jjtn007);
        try {
          Wff();
        } catch (Throwable jjte007) {
                                  if (jjtc007) {
                                    jjtree.clearNodeScope(jjtn007);
                                    jjtc007 = false;
                                  } else {
                                    jjtree.popNode();
                                  }
                                  if (jjte007 instanceof RuntimeException) {
                                    {if (true) throw (RuntimeException)jjte007;}
                                  }
                                  if (jjte007 instanceof ParseException) {
                                    {if (true) throw (ParseException)jjte007;}
                                  }
                                  {if (true) throw (Error)jjte007;}
        } finally {
                                  if (jjtc007) {
                                    jjtree.closeNodeScope(jjtn007,  2);
                                  }
        }
        jj_consume_token(7);
      } else if (jj_2_13(3)) {
        jj_consume_token(6);
        jj_consume_token(15);
        Agent();
                          SLB jjtn008 = new SLB(this, JJTB);
                          boolean jjtc008 = true;
                          jjtree.openNodeScope(jjtn008);
        try {
          Wff();
        } catch (Throwable jjte008) {
                          if (jjtc008) {
                            jjtree.clearNodeScope(jjtn008);
                            jjtc008 = false;
                          } else {
                            jjtree.popNode();
                          }
                          if (jjte008 instanceof RuntimeException) {
                            {if (true) throw (RuntimeException)jjte008;}
                          }
                          if (jjte008 instanceof ParseException) {
                            {if (true) throw (ParseException)jjte008;}
                          }
                          {if (true) throw (Error)jjte008;}
        } finally {
                          if (jjtc008) {
                            jjtree.closeNodeScope(jjtn008,  2);
                          }
        }
        jj_consume_token(7);
      } else if (jj_2_14(3)) {
        jj_consume_token(6);
        jj_consume_token(16);
        Agent();
                          SLU jjtn009 = new SLU(this, JJTU);
                          boolean jjtc009 = true;
                          jjtree.openNodeScope(jjtn009);
        try {
          Wff();
        } catch (Throwable jjte009) {
                          if (jjtc009) {
                            jjtree.clearNodeScope(jjtn009);
                            jjtc009 = false;
                          } else {
                            jjtree.popNode();
                          }
                          if (jjte009 instanceof RuntimeException) {
                            {if (true) throw (RuntimeException)jjte009;}
                          }
                          if (jjte009 instanceof ParseException) {
                            {if (true) throw (ParseException)jjte009;}
                          }
                          {if (true) throw (Error)jjte009;}
        } finally {
                          if (jjtc009) {
                            jjtree.closeNodeScope(jjtn009,  2);
                          }
        }
        jj_consume_token(7);
      } else if (jj_2_15(3)) {
        jj_consume_token(6);
        jj_consume_token(17);
        Agent();
                           SLPG jjtn010 = new SLPG(this, JJTPG);
                           boolean jjtc010 = true;
                           jjtree.openNodeScope(jjtn010);
        try {
          Wff();
        } catch (Throwable jjte010) {
                           if (jjtc010) {
                             jjtree.clearNodeScope(jjtn010);
                             jjtc010 = false;
                           } else {
                             jjtree.popNode();
                           }
                           if (jjte010 instanceof RuntimeException) {
                             {if (true) throw (RuntimeException)jjte010;}
                           }
                           if (jjte010 instanceof ParseException) {
                             {if (true) throw (ParseException)jjte010;}
                           }
                           {if (true) throw (Error)jjte010;}
        } finally {
                           if (jjtc010) {
                             jjtree.closeNodeScope(jjtn010,  2);
                           }
        }
        jj_consume_token(7);
      } else if (jj_2_16(3)) {
        jj_consume_token(6);
        jj_consume_token(18);
        Agent();
                          SLI jjtn011 = new SLI(this, JJTI);
                          boolean jjtc011 = true;
                          jjtree.openNodeScope(jjtn011);
        try {
          Wff();
        } catch (Throwable jjte011) {
                          if (jjtc011) {
                            jjtree.clearNodeScope(jjtn011);
                            jjtc011 = false;
                          } else {
                            jjtree.popNode();
                          }
                          if (jjte011 instanceof RuntimeException) {
                            {if (true) throw (RuntimeException)jjte011;}
                          }
                          if (jjte011 instanceof ParseException) {
                            {if (true) throw (ParseException)jjte011;}
                          }
                          {if (true) throw (Error)jjte011;}
        } finally {
                          if (jjtc011) {
                            jjtree.closeNodeScope(jjtn011,  2);
                          }
        }
        jj_consume_token(7);
      } else if (jj_2_17(3)) {
        ActionOp();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void ActionOp() throws ParseException {
 /*@bgen(jjtree) ActionOp */
  SLActionOp jjtn000 = new SLActionOp(this, JJTACTIONOP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_18(3)) {
        jj_consume_token(6);
        jj_consume_token(19);
        ActionExpression();
                                            SLFeasible jjtn001 = new SLFeasible(this, JJTFEASIBLE);
                                            boolean jjtc001 = true;
                                            jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(7);
        } finally {
                                            if (jjtc001) {
                                              jjtree.closeNodeScope(jjtn001, true);
                                            }
        }
      } else if (jj_2_19(3)) {
        jj_consume_token(6);
              SLDone jjtn002 = new SLDone(this, JJTDONE);
              boolean jjtc002 = true;
              jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(20);
        } finally {
              if (jjtc002) {
                jjtree.closeNodeScope(jjtn002, true);
              }
        }
        ActionExpression();
        jj_consume_token(7);
      } else if (jj_2_20(3)) {
        jj_consume_token(6);
        jj_consume_token(19);
        ActionExpression();
        Wff();
                                                  SLFeasible jjtn003 = new SLFeasible(this, JJTFEASIBLE);
                                                  boolean jjtc003 = true;
                                                  jjtree.openNodeScope(jjtn003);
        try {
          jj_consume_token(7);
        } finally {
                                                  if (jjtc003) {
                                                    jjtree.closeNodeScope(jjtn003, true);
                                                  }
        }
      } else if (jj_2_21(3)) {
        jj_consume_token(6);
              SLDone jjtn004 = new SLDone(this, JJTDONE);
              boolean jjtc004 = true;
              jjtree.openNodeScope(jjtn004);
        try {
          jj_consume_token(20);
        } finally {
              if (jjtc004) {
                jjtree.closeNodeScope(jjtn004, true);
              }
        }
        ActionExpression();
        Wff();
        jj_consume_token(7);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void AtomicFormula() throws ParseException {
 /*@bgen(jjtree) AtomicFormula */
  SLAtomicFormula jjtn000 = new SLAtomicFormula(this, JJTATOMICFORMULA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_23(3)) {
        PropositionSymbol();
      } else if (jj_2_24(3)) {
        BinaryTermOp();
      } else if (jj_2_25(3)) {
        jj_consume_token(6);
        PredicateSymbol();
        label_2:
        while (true) {
          TermOrIE();
          if (jj_2_22(3)) {
            ;
          } else {
            break label_2;
          }
        }
        jj_consume_token(7);
      } else if (jj_2_26(3)) {
          SLTrue jjtn001 = new SLTrue(this, JJTTRUE);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(21);
        } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
        }
      } else if (jj_2_27(3)) {
          SLFalse jjtn002 = new SLFalse(this, JJTFALSE);
          boolean jjtc002 = true;
          jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(22);
        } finally {
          if (jjtc002) {
            jjtree.closeNodeScope(jjtn002, true);
          }
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void BinaryTermOp() throws ParseException {
 /*@bgen(jjtree) BinaryTermOp */
  SLBinaryTermOp jjtn000 = new SLBinaryTermOp(this, JJTBINARYTERMOP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_28(3)) {
        jj_consume_token(6);
        jj_consume_token(23);
        TermOrIE();
        TermOrIE();
                                        SLEqual jjtn001 = new SLEqual(this, JJTEQUAL);
                                        boolean jjtc001 = true;
                                        jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(7);
        } finally {
                                        if (jjtc001) {
                                          jjtree.closeNodeScope(jjtn001,  2);
                                        }
        }
      } else if (jj_2_29(3)) {
        jj_consume_token(6);
        jj_consume_token(24);
        TermOrIE();
        TermOrIE();
                                             SLResult jjtn002 = new SLResult(this, JJTRESULT);
                                             boolean jjtc002 = true;
                                             jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(7);
        } finally {
                                             if (jjtc002) {
                                               jjtree.closeNodeScope(jjtn002,  2);
                                             }
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void TermOrIE() throws ParseException {
 /*@bgen(jjtree) TermOrIE */
  SLTermOrIE jjtn000 = new SLTermOrIE(this, JJTTERMORIE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_30(3)) {
        Term();
      } else if (jj_2_31(3)) {
        IdentifyingExpression();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Term() throws ParseException {
 /*@bgen(jjtree) Term */
  SLTerm jjtn000 = new SLTerm(this, JJTTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_32(3)) {
        Variable();
      } else if (jj_2_33(3)) {
        FunctionalTerm();
      } else if (jj_2_34(3)) {
        ActionExpression();
      } else if (jj_2_35(3)) {
        Constant();
      } else if (jj_2_36(3)) {
        Sequence();
      } else if (jj_2_37(3)) {
        Set();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }
